--- a/index.html
+++ b/index.html
@@ -1,49 +1,20 @@
-<!doctype html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Netflix Categories</title>
+---
+layout: default
+---
 
-	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:site" content="@peduarte" />
-	<meta name="twitter:creator" content="@peduarte" />
-	<meta name="twitter:title" content="Netflix Categories" />
-	<meta name="twitter:description" content="Everyone's Trump countdown" />
-	<meta name="twitter:url" content="http://peduarte.github.io/netflix-categories/" />
-	<meta name="twitter:image" content="http://peduarte.github.io/netflix-categories/postcard.png" />
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 276.742" class="logo"><path d="M140.803 258.904c-15.404 2.705-31.079 3.516-47.294 5.676l-49.458-144.856v151.073c-15.404 1.621-29.457 3.783-44.051 5.945v-276.742h41.08l56.212 157.021v-157.021h43.511v258.904zm85.131-157.558c16.757 0 42.431-.811 57.835-.811v43.24c-19.189 0-41.619 0-57.835.811v64.322c25.405-1.621 50.809-3.785 76.482-4.596v41.617l-119.724 9.461v-255.39h119.724v43.241h-76.482v58.105zm237.284-58.104h-44.862v198.908c-14.594 0-29.188 0-43.239.539v-199.447h-44.862v-43.242h132.965l-.002 43.242zm70.266 55.132h59.187v43.24h-59.187v98.104h-42.433v-239.718h120.808v43.241h-78.375v55.133zm148.641 103.507c24.594.539 49.456 2.434 73.51 3.783v42.701c-38.646-2.434-77.293-4.863-116.75-5.676v-242.689h43.24v201.881zm109.994 49.457c13.783.812 28.377 1.623 42.43 3.242v-254.58h-42.43v251.338zm231.881-251.338l-54.863 131.615 54.863 145.127c-16.217-2.162-32.432-5.135-48.648-7.838l-31.078-79.994-31.617 73.51c-15.678-2.705-30.812-3.516-46.484-5.678l55.672-126.75-50.269-129.992h46.482l28.377 72.699 30.27-72.699h47.295z"/></svg>
 
-	<meta property="og:url" content="http://peduarte.github.io/netflix-categories/" />
-	<meta property="og:image" content="http://peduarte.github.io/netflix-categories/postcard.png" />
-	<meta property="og:title" content="Netflix Categories" />
-	<meta property="og:description" content="Netflix Categories" />
+<h1>Categories</h1>
 
-	<link rel="icon" type="image/png" href="http://peduarte.github.io/netflix-categories/favicon-16x16.png" sizes="16x16">
-	<link rel="icon" type="image/png" href="http://peduarte.github.io/netflix-categories/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="http://peduarte.github.io/netflix-categories/favicon-64x64.png" sizes="64x64">
-
-
-	<style>
-		* {
-			padding: 0;
-			margin: 0;
-			box-sizing: border-box;
-		}
-
-		body {
-			padding: 5%;
-			background-color: #141414;
-		}
-	</style>
-</head>
-
-<body>
-
-
-	<svg xmlns="http://www.w3.org/2000/svg" width="1024" height="276.742" viewBox="0 0 1024 276.742"><path d="M140.803 258.904c-15.404 2.705-31.079 3.516-47.294 5.676l-49.458-144.856v151.073c-15.404 1.621-29.457 3.783-44.051 5.945v-276.742h41.08l56.212 157.021v-157.021h43.511v258.904zm85.131-157.558c16.757 0 42.431-.811 57.835-.811v43.24c-19.189 0-41.619 0-57.835.811v64.322c25.405-1.621 50.809-3.785 76.482-4.596v41.617l-119.724 9.461v-255.39h119.724v43.241h-76.482v58.105zm237.284-58.104h-44.862v198.908c-14.594 0-29.188 0-43.239.539v-199.447h-44.862v-43.242h132.965l-.002 43.242zm70.266 55.132h59.187v43.24h-59.187v98.104h-42.433v-239.718h120.808v43.241h-78.375v55.133zm148.641 103.507c24.594.539 49.456 2.434 73.51 3.783v42.701c-38.646-2.434-77.293-4.863-116.75-5.676v-242.689h43.24v201.881zm109.994 49.457c13.783.812 28.377 1.623 42.43 3.242v-254.58h-42.43v251.338zm231.881-251.338l-54.863 131.615 54.863 145.127c-16.217-2.162-32.432-5.135-48.648-7.838l-31.078-79.994-31.617 73.51c-15.678-2.705-30.812-3.516-46.484-5.678l55.672-126.75-50.269-129.992h46.482l28.377 72.699 30.27-72.699h47.295z" fill="#d81f26"/></svg>
-
-	<script>
-		var categories = [];
-	</script>
-</body>
-</html>
+<div class="categories">
+	{% for categoryGroup in site.data.categories %}
+		<div class="category">
+			<h3>{{ categoryGroup[0] }}</h3>
+			<div>
+				{% for category in categoryGroup[1] %}
+					<p><a href="https://netflix.com/browse/genre/{{ category.id }}">{{ category.label }}</a></p>
+				{% endfor %}
+			</div>
+		</div>
+	{% endfor %}
+</div>
