--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 			<h3>{{ categoryGroup[0] }}</h3>
 			<ul class="list">
 				{% for category in categoryGroup[1] %}
-					<li><a href="https://netflix.com/browse/genre/{{ category.id }}">{{ category.label }} <small>{{ category.id }}</small></a></li>
+					<li><a href="https://netflix.com/browse/genre/{{ category.id }}">{{ category.label }} <small style="color: #666;">{{ category.id }}</small></a></li>
 				{% endfor %}
 			</ul>
 		</div>
